# piramid

./: CMakeLists.txt  INSTALL.txt  README.txt  piramid.tmproj  piramidConfig.h.in
doc/: manual.docx
examples/: Aligned.sdf  Dexamethasone.sdf  Fluticasone.sdf
include/: alignmentInfo.h  atomGaussian.h  bestResults.h  coordinate.h  gaussianVolume.h  mainErr.h  moleculeRotation.h  options.h  parseCommandLine.h  piramidConfig.h  printHeader.h  printUsage.h  shapeAlignment.h  siMath.h  solutionInfo.h
src/: alignmentInfo.cpp  atomGaussian.cpp  bestResults.cpp  coordinate.cpp  gaussianVolume.cpp  main.cpp  mainErr.cpp  moleculeRotation.cpp  options.cpp  parseCommandLine.cpp  printHeader.cpp  printUsage.cpp  shapeAlignment.cpp  siMath.cpp  solutionInfo.cpp
